Implements work with proxies, quotas per-key
