# internal/driver/server/provider_config.go
@@ -1,6 +1,8 @@
 package server
 
 import (
+	"context"
+	"fmt"
 	"strings"
 
 	"github.com/router-for-me/CLIProxyAPI/v7/sdk/config"
@@ -8,10 +10,10 @@ import (
 	aoyorouter "github.com/yawaflua/aoyorouter/pkg/pb/api/aoyorouter/docs/api/v1"
 )
 
-func (a *AoyoRouterService) addProvider(provider *models.Provider) error {
+func (a *AoyoRouterService) addProvider(provider *models.Provider, ctx context.Context) error {
 	a.configMu.Lock()
 	defer a.configMu.Unlock()
-	addProviderConfig(a.CPAPIConfig, provider)
+	a.addProviderConfig(ctx, a.CPAPIConfig, provider)
 	return config.SaveConfigPreserveComments(cpapiConfigPath, a.CPAPIConfig)
 }
 
@@ -22,7 +24,12 @@ func (a *AoyoRouterService) removeProvider(provider *models.Provider) error {
 	return config.SaveConfigPreserveComments(cpapiConfigPath, a.CPAPIConfig)
 }
 
-func addProviderConfig(cfg *config.Config, provider *models.Provider) {
+func (a *AoyoRouterService) addProviderConfig(ctx context.Context, cfg *config.Config, provider *models.Provider) {
+	if provider.UseProxy && provider.Proxy == "" {
+		proxy := a.warp.CreateProxy(ctx, fmt.Sprintf("%s-%s", provider.ID, provider.Name))
+		provider.Proxy = fmt.Sprintf("http://%s", proxy.Addr().String())
+	}
+
 	switch aoyorouter.ProviderType(provider.Type) {
 	case aoyorouter.ProviderType_PROVIDER_TYPE_OPENAI:
 		if strings.HasPrefix(provider.ClientSecret, "oauth:") {
@@ -89,5 +96,13 @@ func removeProviderConfig(cfg *config.Config, provider *models.Provider) {
 }
 
 func providerToProto(provider *models.Provider) *aoyorouter.Provider {
-	return &aoyorouter.Provider{Id: provider.ID, Name: provider.Name, Type: aoyorouter.ProviderType(provider.Type), ClientId: provider.ClientID, ClientSecret: provider.ClientSecret}
+	return &aoyorouter.Provider{
+		Id:           provider.ID,
+		Name:         provider.Name,
+		Type:         aoyorouter.ProviderType(provider.Type),
+		ClientId:     provider.ClientID,
+		ClientSecret: provider.ClientSecret,
+		UseProxy:     provider.UseProxy,
+		Proxy:        provider.Proxy,
+	}
 }
